--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "test-worker",
   "version": "1.0.0",
   "description": "A template for kick starting a Cloudflare Workers project",
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
   "scripts": {
     "watch": "wrangler preview --watch",
     "build": "tsup",
@@ -18,6 +18,7 @@
     "tsup": "^5.11.13"
   },
   "dependencies": {
+    "@cloudflare/types": "^6.13.4",
     "@types/jest": "^26.0.23",
     "@types/service-worker-mock": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -25,12 +26,13 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-typescript": "^3.0.0",
+    "form-data": "^4.0.0",
     "jest": "^27.0.1",
+    "node-fetch": "^3.2.0",
     "prettier": "^2.3.0",
     "service-worker-mock": "^2.0.5",
     "ts-jest": "^27.0.1",
     "ts-loader": "^9.2.2",
-    "typescript": "^4.3.2",
-    "@cloudflare/types": "^6.13.4"
+    "typescript": "^4.3.2"
   }
 }
